# requests

engine/: index.html
engine/css/: app.css  node-canvas.css
engine/js/: app.js  node-canvas.js
engine/rust-api/: Cargo.toml
engine/rust-api/src/: main.rs
engine/rust-api/src/providers/: gemini.rs  openai_compat.rs
